# afs_cortex

./: .gitignore  README.md  afs_parse_sproc.sql  environment.yml  pyproject.toml  snowflake.yml  temp.sql
.snowflake/: config.toml  settings.json
acuvance_coker_design_system/: 00_DESIGN_LANGUAGE.md  01_TOKENS.md  02_POWERPOINT.md  03_HTML_PRESENTATIONS.md  04_DATA_VISUALIZATION.md  05_WEB_APPLICATIONS.md
clients/MEDSTAR_HEALTH/analysis/: opportunity_analysis.sql  opportunity_briefing.md
clients/MEDSTAR_HEALTH/presentations/: deep_dive_balance_sheet.html  deep_dive_balance_sheet_data.sql  deep_dive_balance_sheet_pptx_spec.md  executive_summary.html  executive_summary_data.sql  generate_bs_deep_dive.py
clients/STCHARLES/analysis/: opportunity_analysis.sql  (+1 more)
notebooks/: 01_bootstrap.ipynb  02_ingest.ipynb  03_parse.ipynb  04_analyze.ipynb  05_validate.ipynb  06_generate_pptx.ipynb
presentations/chesapeake_hospital_authority/: ANALYSIS_v1.0_2026-04-20.md  PLAN_v1.0_2026-04-20.md  REV_CYCLE_PLAYBOOK_v1.0_2026-04-30.md  margin_improvement_v1.0_2026-04-30.html  presentation_v1.0_2026-04-20.html  rev_cycle_cfo_v1.0_2026-04-30.html
prompts/: bs_exhibit.md  classify.md  identify.md  insights.md  is_exhibit.md  map_concept.md  mdna_stats.md  notes.md  statements.md
sql/: afs_parse_sproc.sql  bootstrap.sql  standard_taxonomy_seed.csv
src/afs/: __init__.py  classify.py  common_map.py  config.py  cortex_llm.py  exhibits.py  identify.py  insights.py  normalize.py  org_registry.py  pdf_ingest.py  pipeline.py  schemas.py  snowflake_io.py  validate.py
(+19 files in other folders)
